Guide nav: add minimum height to avoid wrapping content
"Guides" that include only a single tab (pages, really), can have their
content wrap right under the menu entry, which looks weird. Prevent this
by making the menu a minimum of 2ems high.

--- a/themes/research7/style.css
+++ b/themes/research7/style.css
@@ -1141,6 +1141,7 @@ div.messages.status {
         max-width: 15%;
         padding-top: 1em !important;
         float: left;
+        min-height: 2em;
     }
     .panel-1col .panel-col {
         max-width: 52em;
